--- a/client/pom.xml
+++ b/client/pom.xml
@@ -33,6 +33,12 @@
 			<version>1.0.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>pt.tecnico.bank.G26</groupId>
+			<artifactId>crypto</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
