--- a/crypto/pom.xml
+++ b/crypto/pom.xml
@@ -1,6 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -9,33 +9,19 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>server</artifactId>
+	<artifactId>crypto</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 
-	<!-- Properties are variables used to customize the behavior of Maven and its plug-ins. -->
-	<properties>
-
-		<mainclass>pt.tecnico.bank.ServerMain</mainclass>
-		<server.port>8080</server.port>
-		<byzantine>1</byzantine>
-
-	</properties>
-
-	<!-- Dependencies are code archives - JARs - on which your current module needs in order to compile, build, test, and/or to run. 
+	<!-- Dependencies are code archives - JARs - on which your current module needs in order to compile, build, test, and/or to run.
 		When you execute a goal, these dependencies are resolved, and are then loaded from the local repository. -->
 	<dependencies>
-		<!-- contract brings gRPC dependencies with it -->
+		<!-- JUnit is a unit testing framework for the Java programming language. -->
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>server-contract</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>crypto</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${version.junit}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -53,7 +39,7 @@
 				<filtering>true</filtering>
 			</testResource>
 		</testResources>
-		<!-- Plug-ins allow for the reuse of common build logic across multiple projects. 
+		<!-- Plug-ins allow for the reuse of common build logic across multiple projects.
 		They do this by executing an "action" in the context of a project's description. -->
 		<plugins>
 			<!-- The Resources plug-in handles the copying of project resources to the output directory. -->
@@ -79,15 +65,6 @@
 						</goals>
 					</execution>
 				</executions>
-				<configuration>
-					<!-- to prevent deprecation warning: -->
-					<killAfter>-1</killAfter>
-					<mainClass>${mainclass}</mainClass>
-					<arguments>
-						<argument>${server.port}</argument>
-						<argument>${byzantine}</argument>
-					</arguments>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
