--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		builds the selected projects in order. -->
 	<modules>
 		<module>server-contract</module>
+		<module>crypto</module>
 		<module>server</module>
 		<module>server-tester</module>
 		<module>client</module>
