--- a/server-tester/pom.xml
+++ b/server-tester/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>server-contract</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>crypto</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		<!-- JUnit is a unit testing framework for the Java programming language. -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
